Fix #1193 Replace Immutable* with Java built-ins (#1237)
* Re-enable the modernizer-maven-plugin
* Update use of all Guava Immutable{List,Set,Map} types with Java 11
  built-ins where possible (does not replace Immutable*.Builders)
* Use var to simplify Immutable*.Builder declarations
* Fix UserImpersonationTest (insert order matters for the test utility to construct the user mapping)

Replacing Immutable*.Builder objects can be done in a future commit.
This change is sufficient to satisfy modernizer checks for Java 11.