@@ -45,9 +45,6 @@ import org.apache.accumulo.harness.AccumuloClusterHarness;
 import org.apache.hadoop.io.Text;
 import org.junit.Test;
 
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
-
 public class LocatorIT extends AccumuloClusterHarness {
 
   @Override
@@ -56,7 +53,7 @@ public class LocatorIT extends AccumuloClusterHarness {
   }
 
   private void assertContains(Locations locations, HashSet<String> tservers,
-      Map<Range,ImmutableSet<TabletId>> expected1, Map<TabletId,ImmutableSet<Range>> expected2) {
+      Map<Range,Set<TabletId>> expected1, Map<TabletId,Set<Range>> expected2) {
 
     Map<Range,Set<TabletId>> gbr = new HashMap<>();
     for (Entry<Range,List<TabletId>> entry : locations.groupByRange().entrySet()) {
@@ -107,23 +104,20 @@ public class LocatorIT extends AccumuloClusterHarness {
 
       ranges.add(r1);
       Locations ret = client.tableOperations().locate(tableName, ranges);
-      assertContains(ret, tservers, ImmutableMap.of(r1, ImmutableSet.of(t1)),
-          ImmutableMap.of(t1, ImmutableSet.of(r1)));
+      assertContains(ret, tservers, Map.of(r1, Set.of(t1)), Map.of(t1, Set.of(r1)));
 
       ranges.add(r2);
       ret = client.tableOperations().locate(tableName, ranges);
-      assertContains(ret, tservers,
-          ImmutableMap.of(r1, ImmutableSet.of(t1), r2, ImmutableSet.of(t1)),
-          ImmutableMap.of(t1, ImmutableSet.of(r1, r2)));
+      assertContains(ret, tservers, Map.of(r1, Set.of(t1), r2, Set.of(t1)),
+          Map.of(t1, Set.of(r1, r2)));
 
       TreeSet<Text> splits = new TreeSet<>();
       splits.add(new Text("r"));
       client.tableOperations().addSplits(tableName, splits);
 
       ret = client.tableOperations().locate(tableName, ranges);
-      assertContains(ret, tservers,
-          ImmutableMap.of(r1, ImmutableSet.of(t2), r2, ImmutableSet.of(t2, t3)),
-          ImmutableMap.of(t2, ImmutableSet.of(r1, r2), t3, ImmutableSet.of(r2)));
+      assertContains(ret, tservers, Map.of(r1, Set.of(t2), r2, Set.of(t2, t3)),
+          Map.of(t2, Set.of(r1, r2), t3, Set.of(r2)));
 
       client.tableOperations().offline(tableName, true);
 
